# nanovllm-voxcpm2-inference

./: .dockerignore  Dockerfile  README.md  entrypoint.sh
nanovllm-voxcpm-main/: .gitignore  ARCHITECTURE.md  README.md  example.py  example_lora.py  example_lora_sync.py  example_sync.py  pyproject.toml  requirements-dev.txt  requirements.txt
nanovllm-voxcpm-main/benchmark/: README.md  bench_closed_loop_users.py  bench_inference.py  bench_open_loop_users.py  lora_bench_utils.py
nanovllm-voxcpm-main/deployment/: Dockerfile  README.md
nanovllm-voxcpm-main/deployment/app/: main.py
nanovllm-voxcpm-main/deployment/app/api/: api.py
nanovllm-voxcpm-main/deployment/app/api/routes/: generate.py  info.py  lora.py  ui.py  voice_presets.py  voices.py
nanovllm-voxcpm-main/deployment/app/core/: config.py  lifespan.py  metrics.py
nanovllm-voxcpm-main/deployment/app/schemas/: http.py
nanovllm-voxcpm-main/deployment/app/static/: demo.html  index.html
nanovllm-voxcpm-main/deployment/tests/: conftest.py  test_core_config.py  test_deployment_app.py  test_routes_additional_coverage.py
nanovllm-voxcpm-main/docs/adr/: 0001-runner-owns-host-device-transfers.md  0002-lora-lifecycle-and-residency.md
nanovllm-voxcpm-main/docs/standards/: runner-transfer-boundary.md
nanovllm-voxcpm-main/nanovllm_voxcpm/: llm.py  lora.py
nanovllm-voxcpm-main/nanovllm_voxcpm/engine/: llm_engine.py  lora_manager.py  model_runner.py  scheduler.py  sequence.py
nanovllm-voxcpm-main/nanovllm_voxcpm/layers/: __init__.py  lora.py
nanovllm-voxcpm-main/nanovllm_voxcpm/lora_ops/triton_ops/: __init__.py  kernel_utils.py  lora_expand_op.py  lora_kernel_metadata.py  lora_shrink_op.py  utils.py
nanovllm-voxcpm-main/nanovllm_voxcpm/models/voxcpm/: config.py  engine.py  lora_loader.py  model.py  runner.py  server.py
nanovllm-voxcpm-main/nanovllm_voxcpm/models/voxcpm2/: __init__.py  config.py  engine.py  lora_loader.py  model.py  runner.py  server.py  utils.py
nanovllm-voxcpm-main/nanovllm_voxcpm/utils/: context.py  loader.py
nanovllm-voxcpm-main/tests/unit/: test_context.py  test_llm_engine.py  test_llm_from_pretrained.py  test_loader.py  test_lora_config.py  test_lora_cuda.py  test_lora_layers.py  test_lora_manager.py  test_lora_runtime.py  test_model_runner_helpers.py  test_scheduler.py  test_scheduler_empty_decode_batch.py  test_voxcpm2_engine_max_model_len.py  test_voxcpm2_lora_checkpoint_loader.py  test_voxcpm2_residual_lm_no_rope.py  test_voxcpm2_server_encode_latents.py  test_voxcpm2_serverpool_lora_api.py  test_voxcpm_engine_max_model_len.py  test_voxcpm_lora_checkpoint_loader.py  test_voxcpm_server_encode_latents.py  test_voxcpm_serverpool_lora_api.py
