[build-system]
requires = ["setuptools>=61", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm-voxcpm"
dynamic = ["version"]
authors = [{ name = "Guoyang Zeng" }]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"
description = "VoxCPM inference engine based on Nano-vLLM"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.7.1",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "xxhash",
    "torchaudio==2.7.1",
    "tqdm",
    "numpy",
    "librosa",
    "pydantic",
    "flash-attn==2.8.3",
    "soundfile>=0.13.1",
    "torchcodec",
]

# Pin torch family to cu126 prebuilt wheels and flash-attn to its matching
# GitHub release wheel. This skips the from-source flash-attn compile entirely
# (which takes 30-90+ min on small EC2 instances).
[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
flash-attn = { url = "https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3+cu12torch2.7cxx11abiFALSE-cp310-cp310-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[project.urls]
Homepage="https://github.com/a710128/nanovllm-voxcpm"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
# Derive the package version from git tags.
# - Tags are currently prefixed with "v" (e.g. v1.0.0rc3); strip the prefix.
# - Use post-release scheme for commits after a tag, and keep local version info.
tag_regex = "^(?:v)?(?P<version>.*)$"
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "nanovllm_voxcpm/_version.py"
fallback_version = "0.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm_voxcpm*"]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["tests", "deployment/tests"]

[tool.mypy]
python_version = "3.10"

# Keep CI usable by avoiding third-party stub churn and excluding
# non-library entrypoints/tests from typechecking.
ignore_missing_imports = true
no_implicit_optional = false
exclude = "^(tests/|deployment/tests/|benchmark/|example.*\\.py$)"

warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "nanovllm_voxcpm.layers.*",
    "nanovllm_voxcpm.models.voxcpm.*",
    "nanovllm_voxcpm.models.voxcpm2.*",
]
ignore_errors = true

[tool.uv.extra-build-dependencies]
flash-attn = [
    { requirement = "torch", match-runtime = true },
    "setuptools",
    "wheel",
    "psutil",
    "packaging",
    "ninja",
]

[tool.uv.workspace]
members = ["deployment"]

[dependency-groups]
dev = [
    "black==26.3.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
